Fixed top margin on mobile

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -184,7 +184,7 @@
 
 @media all and (max-width: 768px)
   .et_pb_section.et_pb_section_0
-    padding: 57px 0 57px 0
+    padding: 30px 0
   .grid-image-gallery .et_pb_gallery_item.et_pb_gallery_item img
     width: 147px
     height: 147px
